# lab13

./: CMakeLists.txt  example.xml
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/_3rdParty/Hunter/: install-root-dir
_builds/_3rdParty/Hunter/config-id/: config.cmake
_builds/_3rdParty/Hunter/toolchain/: toolchain.info
_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
sources/: pack.cpp  unpack.cpp
